--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: portfolio_smilarity
+Package: portfolio_similarity
 Type: Package
 Title: What the package does (short line)
 Version: 1.0
 Date: 2014-07-15
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What Licence is it under ?
+Author: Václav Hausenblas
+Maintainer: Václav Hausenblas <vencahaus@seznam.cz>
+Description: Usefull function for simulating banks' porfolios and measuring their similarity
+License: MIT
 Imports: Rcpp (>= 0.11.0)
 LinkingTo: Rcpp
